:globe_with_meridians: Last draft fixes

--- a/words.html
+++ b/words.html
@@ -76,7 +76,7 @@ Thanks again!
 <br>
 перевёл максим toby3d лебедев
 &#8226;
-<a href="http://ncase.me/trust/">original English version</a>
+<a href="http://ncase.me/trust/">original english version</a>
 
 </p>
 
@@ -161,11 +161,11 @@ Thanks again!
 </p>
 
 <p id="oneoff_1_cheated">
-В точку! Зачем позволять этому мучителю отмахиваться от вас?
+В точку! Зачем позволять этому мучителю отмахиваться от тебя?
 </p>
 
 <p id="oneoff_1_cooperated">
-Увы, подставив другую щеку, тебя просто ударят!
+Увы, подставив другую щеку, тебя ударят снова!
 </p>
 
 <p id="oneoff_1_top">
@@ -188,7 +188,7 @@ Thanks again!
 </p>
 
 <p id="oneoff_2_top">
-Потому что, если вы сотрудничаете, то вы оба бросаете монету, чтобы выиграть 3. (счёт: +2 vs +2)
+Потому что, если ты сотрудничаешь, то вы оба бросаете монету, чтобы выиграть 3. (счёт: +2 vs +2)
 Но если ты обманываешь и он доверился, то ты получаешь 3 монеты по цене 1. (счёт: +3 vs -1)
 <b>Потому: ты ещё "должен" ЖУЛЬНИЧАТЬ.</b>
 </p>
@@ -259,7 +259,7 @@ Thanks again!
 
 <p id="character_tft">
 <b>КОПИКОТ:</b>
-Привет! Я начну Сотрудничать, а потом просто буду копировать всё, что ты делал в последнем раунде. Мяу
+Привет! Я начну сотрудничать, а потом просто буду копировать всё, что ты делал в последнем раунде. Мяу
 </p>
 
 <p id="character_all_d">
@@ -280,7 +280,7 @@ Thanks again!
 
 <p id="character_prober">
 <b>ДЕТЕКТИВ:</b>
-Первое: я анализирую тебя. Я начну: Доверять, Обманывать, Доверять, Доверять.
+Первое: я анализирую тебя. Я начну: доверять, обманывать, ловерять, ловерять.
 Если ты обманешь, я буду действовать как <span class="tft">Копикот</span>.
 Если ты никогда не обманешь, я буду <span class="all_d">всегда жульничать</span>, чтобы использовать тебя.
 Элементарно, мой дорогой Ватсон.
@@ -377,7 +377,7 @@ Thanks again!
 <b class="tft">КОПИКОТ!</b>
 </p>
 <p id="tournament_winner_2_yay">
-Поздравляю, ты сделал свою ставку на правильную лошадку.
+Поздравляю, ты сделал ставку на правильную лошадку.
 </p>
 <p id="tournament_winner_2_nay">
 (Извиняюсь за твою ставку, [CHAR].)
@@ -434,7 +434,7 @@ Thanks again!
 <span class="tft">5 Копикотов</span>.
 (Мы будем игнорировать <span class="grudge">Злопамятных</span> и <span class="prober">Детективов</span>)
 <br><br>
-Мы собираемся сделать турнир-исключить-воспроизвести танец дюжину раз или около того.
+Мы собираемся сделать турнир-исключения-репродукции дюжину раз или около того.
 Сделаем ещё одну ставку! Кто, по твоему мнению, выиграет <i>первый</i> турнир?
 <b>ДЕЛАЙТЕ ВАШИ СТАВКИ, СНОВА:</b>
 </p>
@@ -446,7 +446,7 @@ Thanks again!
 Делает смысл, <span class="all_d">Обманщики</span> могут эксплуатировать <span class="all_c">Наивных</span>...
 </p>
 <p id="evo_2_tft">
-Делает смысл, <span class="tft">Копикот</span> выиграл турнир в прошлый раз, почему он не может снова?...
+Делает смысл, <span class="tft">Копикот</span> выиграл турнир в прошлый раз, почему он не сможет сейчас?...
 </p>
 <p id="evo_2">
 Посмотрим, прав ли ты:
@@ -456,7 +456,7 @@ Thanks again!
 1) играем турнир
 </p>
 <p id="label_eliminate_bottom_5">
-2) устраняем 5 худших
+2) удаляем 5 худших
 </p>
 <p id="label_reproduce_top_5">
 3) копируем 5 лучших
@@ -499,7 +499,7 @@ Thanks again!
 Просто копируя движения другого игрока,
 <span class="tft">Копикоты</span> могут хорошо играть друг с другом,
 когда как <span class="all_d">Обманщики</span> посто обманывают себя!
-Мало того, но это также означает что <span class="tft">Копикот</span>
+Мало того, но это также означает что <span class="tft">Копикоты</span>
 может дать <span class="all_d">Обманщикам</span>
 вкус их собственного лекарства.
 </p>
@@ -518,18 +518,18 @@ Thanks again!
 </p>
 <p id="evo_9_all_d">
 Итак, в краткосрочной перспективе ты был прав - <span class="all_d">Обманщики</span> выиграли первые несколько раундов,
-но в конце-концов, их эксплуататорство было их провалом.
+но в конце-концов, их эксплуататорство стало их провалом.
 </p>
 <p id="evo_9_tft">
-Итак, в конечном счёте, ты был прав - <span class="tft">Копикот</span> побеждает!
+Итак, в конечном счёте, ты был прав - <span class="tft">Копикоты</span> побеждают!
 <span class="all_d">Обманщики</span>, возможно, выигрывали в краткосрочной перспективе,
-но их эксплуататорство было их провалом.
+но их эксплуататорство стало их провалом.
 </p>
 <p id="evo_9_end">
 Это напоминает мне цитату:
 <br><br>
 <i>"Мы наказаны нашими грехами, а не из-за них."</i><br>
-~ Элберт Хаббард
+~ Elbert Hubbard
 </p>
 <p id="evo_9_btn">
 (ой, и кстати...)
@@ -550,12 +550,12 @@ Thanks again!
 <p id="evo_10_followup">
 (Примечание: иногда, несколько <span class="grudge">Злопамятных</span> могут задержаться,
 потому что все игроки кроме <span class="grudge">Злопамятных</span> и <span class="tft">Копикотов</span> 
-устранены, два ничьих.)
+устранены, две ничьих.)
 <br><br>
 Итак, кажется, что математика теории игр нам говорит, что:
 философия <span class="tft">Копикотов</span>,
-"Поступай с другими так, как ты хотел, чтобы другие поступали с тобой", может быть не такой 
-<i>моральной</i> истиной, но и <i>математической</i> истиной.
+"Поступай с другими так, как ты хотел, чтобы другие поступали с тобой", может быть не просто
+<i>моральной</i> истиной, сколько <i>математической</i> истиной.
 Однако...
 </p>
 <p id="evo_10_btn">
@@ -582,7 +582,7 @@ Thanks again!
 <!-- - - - - - - - - - - - - - - - - -->
 
 <p id="distrust_1">
-Прежде чем все пройдёт, давай начнём с чего-то приятного!
+Прежде чем все произойдёт, давай начнём с чего-то приятного!
 Вот мир, полностью заполненный <span class="all_c">Наивными</span>, за исключением одного <span class="all_d">Обманщика</span> и одного <span class="tft">Копикота</span>.
 <br><br>
 Используй кнопки справа, чтобы <b>НАЧАТЬ</b> симуляцию,
@@ -606,16 +606,17 @@ Thanks again!
 </p>
 
 <p id="distrust_3">
-Как ты видишь, если ты не играешь достаточно раундов, (здесь: 5 или меньше)
+Если ты не играешь достаточно раундов, (здесь: 5 или меньше)
 <span class="all_d">Обманщики</span> доминируют.
 <br><br>
 В 1985 году, когда американцев спросили, сколько у них близких друзей,
-наиболее распространенным ответом было "три". В 2004 году, наиболее распространенным ответом было <i>"ноль"</i>.
-У нас теперь меньше друзей по классовым, расовым, экономическим и политическим направлениям, потому что у нас меньше друзей -- <i>период.</i> И как ты только что открыл для себя,
+популярным ответом был "3". А в 2004-м стал <i>"0"</i>.
+У нас теперь меньше друзей по классовым, расовым, экономическим и политическим направлениям, потому что у нас меньше друзей -- <i>замкнутый круг.</i>
+И, как ты понял,
 <b>чем меньше "повторных взаимодействий", тем больше будет распространяться недоверие.</b>
 <br><br>
-(Нет, средства массовой информации не учитываются:
-Это должно быть <i>двухстороннее</i> взаимодействие между <i>конкретными людьми</i>.)
+(Нет, СМИ не считаются:
+это должно быть <i>двухстороннее</i> взаимодействие между <i>конкретными людьми</i>.)
 </p>
 <p id="distrust_3_btn">
 и, ох, становится хуже... &rarr;
@@ -644,15 +645,15 @@ Thanks again!
 с низкой "беспроигрышной" наградой, <span class="all_d">Обманщики</span> берут верх.
 Теория игр имеет две сильные идеи об этом:
 <br><br>
-<b>"Игра с нулевой суммой".</b> Это, к сожалению, общее убеждение, что выигрыш для "нас" <i>должен</i> стать недопустимым "для них", и наоборот.
+<b>"Игра с нулевой суммой".</b> К сожалению, общее убеждение, что выигрыш для "нас" <i>должен</i> стать недопустимым "для них", и наоборот.
 <br><br>
-<b>"Игра с ненулевой суммой".</b> Это когда люди прилагают все усилия для создания беспроигрышного решения! (или, по крайней мере, избегают потери). Без игры с нулевой суммой <i>доверие не может развиваться.</i>
+<b>"Игра с ненулевой суммой".</b> Когда люди прилагают все усилия для создания беспроигрышного исхода! (или, по крайней мере, избегают потерь.) Без игры с нулевой суммой <i>доверие не может развиваться.</i>
 <br><br>
 Говоря об этом,
-давай теперь посмотрим на наш третий и последний барьер на пути развития доверия...
+давай посмотрим на наш третий и последний барьер на пути развития доверия...
 </p>
 <p id="distrust_5_btn">
-<s>Ошепки</s> Ошибки. &rarr;
+<s>Ошипки</s> Ошибки. &rarr;
 </p>
 
 <!-- - - - - - - - - - - - - - - - - -->
@@ -668,25 +669,25 @@ Thanks again!
 </p>
 
 <p id="noise_2">
-И, как правило, они просто вознаградили друг друга добротой и пели Кумбайю до конца времён.
+И, как правило, они просто вознаградили друг друга добротой и пели Kumbaya до конца времён.
 </p>
 <p id="noise_2_end">
 Но что, если, пытаясь ответить взаимностью...
 </p>
 
 <p id="noise_3">
-<b>ОЙ НЕТ</b>
+<b>О НЕТ</b>
 <br>
 Ошибки, недопонимание, неправильное толкование -- несчастные случаи происходят все время в реальной жизни.
 </p>
 <p id="noise_3_end">
-Но если другой человек не <i>поверил</i> в то, что это был несчастный случай...
+Но если другой игрок не <i>поверил</i> в то, что это был несчастный случай...
 </p>
 
 <p id="noise_4">
-<b>ОЙ НЕТ ВТОРОЙ РАЗ</b>
+<b>О НЕТ ВТОРОЙ РАЗ</b>
 <br>
-Другой игрок, являющийся <span class="tft">Копикотом</span>, <i>должен</i> бы был отомстить...
+Другой игрок, являющийся <span class="tft">Копикотом</span>, <i>должен</i> будет отомстить...
 </p>
 <p id="noise_4_end">
 ...и ты, будучи <span class="tft">Копикотом</span>, также <i>должен</i> будешь нанести ответный удар...
@@ -695,7 +696,7 @@ Thanks again!
 <p id="noise_5">
 Таким образом, подобно Hatfields и McCoys,
 эти два <span class="tft">Копикота</span> будут крутиться в бесконечном цикле мести...
-Что начался с одной ошибки, давным-давно.
+Который начался с одной ошибки, давным-давно.
 </p>
 <p id="noise_5_end">
 Трагично. Но теперь есть <i>другие</i> типы игроков, которые могут...
@@ -705,13 +706,13 @@ Thanks again!
 </p>
 
 <p id="noise_characters">
-Давайте встретим новые лица! (или, новые шляпы, не суть)
+Давай встретим новые лица! (или, новые шляпы, не суть)
 </p>
 
 <p id="character_tf2t">
 <b>КОПИКОТЁНОК:</b><br>
 Привет! Я как <span class="tft">Копикот</span>,
-кроме того, что я Жульничаю только после того, как ты Обманешь меня два раза подряд.
+разве что я Жульничаю только после того, как ты обманешь меня два раза подряд.
 В конце концов, первый раз может быть ошибкой! Муррррр
 </p>
 
@@ -719,13 +720,13 @@ Thanks again!
 <b>ПРОСТАК:</b><br>
 привет я попытаюсь начать сотрудничать.
 если ты доверишься в ответ, я сделаю <i>то же самое</i>, что и в последний ход, даже если это ошибка.
-если ты обманешь в ответ, я сделаю <i>противоположную вещь</i>, что и последний ход, даже если это ошибка.
+если ты обманешь в ответ, я сделаю <i>противоположную вещь</i>, что и в последнем ходе, даже если это ошибка.
 </p>
 
 <p id="character_random">
 <b>СЛУЧАЙНЫЙ:</b><br>
 <i>Обезьяний робот! Ниндзя тако пицца! лол я такой непредсказуемый</i><br>
-(Просто Жульничает или Сотрудничает случайным образом с вероятностью 50/50)
+(Просто жульничает или сотрудничает случайным образом с вероятностью 50/50)
 </p>
 
 <p id="noise_characters_end">
@@ -744,13 +745,13 @@ Thanks again!
 скучного <span class="pavlov">Простака</span>, и
 глупого <span class="random">Случайного</span>.
 <br><br>
-В каждом раунде у игроков есть небольшая вероятность совершить ошибку. (скажем, 5%)
+В каждом раунде у игроков есть небольшая вероятность сделать ошибку. (скажем, 5%)
 Кто, по твоему мнению, выйдет на первое место?
 <b>Хорошо подумай, затем ДЕЛАЙТЕ ВАШИ СТАВКИ:</b>
 </p>
 
 <p id="noise_evo_2">
-Хорошо, ты делаешь ставку на победу [CHAR]. Давай выясним!
+Хорошо, ты делаешь ставку на [CHAR]. Давай выясним!
 Используй элементы управления слева, чтобы <b>НАЧАТЬ</b> быстрый запуск симуляции или пройти её <b>шаг-за-шагом</b>.
 </p>
 <p id="noise_evo_2_2_correct">
@@ -768,13 +769,13 @@ Thanks again!
 </p>
 
 <p id="noise_evo_3">
-...то же самое, что и раньше, за исключением половины <span class="all_c">Наивных</span> с половиной <span class="all_d">Обманщиков</span>. Это гораздо <i>менее</i> прощающая, <i>более</i> враждебная среда.
+...то же самое, что и раньше, за исключением половины <span class="all_c">Наивных</span> с половиной <span class="all_d">Обманщиков</span>. Это гораздо <i>менее</i> снисходительная, <i>более</i> враждебная среда.
 <br><br>
 Кто, по твоему мнению, сейчас победит? <b>Подумай, затем ДЕЛАЙТЕ ВАШИ СТАВКИ:</b>
 </p>
 
 <p id="noise_evo_4">
-Ты делаешь ставку на [CHAR]. Опять же, пройди симуляцию...
+Ты делаешь ставку на [CHAR]. Опять же, запусти симуляцию...
 </p>
 <p id="noise_evo_4_2_correct">
 Ты был прав на деньги --
@@ -788,7 +789,7 @@ Thanks again!
 <span class="tf2t">Копикотёнок</span>,
 <i>более прощающая</i> версия <span class="tft">Копикота</span>,
 был более успешным! (примечание: <span class="tf2t">Копикотёнок</span> настолько снисходителен,
-что даже не <i>полностью</i> уничтожает <span class="tft">Копикота</span>. он делит комнату)
+что даже не <i>полностью</i> уничтожает <span class="tft">Копикота</span>. он делит с ним комнату)
 <br><br>
 В этом случае, небольшое "недопонимание" (5% вероятности ошибки каждый раунд) может привести
 к большему <i>прощению</i>. Но это правда для <i>всех</i> уровней...
@@ -926,9 +927,9 @@ one for the plural version, one for the singular version.
 именно игроки определяют игру.</b>
 <br><br>
 Итак, сделай то, что <i>ты</i> можешь сделать, чтобы создать условия, необходимые
-для развития доверия. Строить отношения. Находить победы. Общаться чётко.
-Может быть, тогда мы сможем прекратить стрелять друг в друга, выбраться
-из наших собственных окопов, пересечь Ничейные земли, чтобы собраться вместе...
+для развития доверия. Строй отношения. Находи победы. Общайся чётко.
+Может быть, тогда мы сможем прекратить стрелять друг в друга, выберемся
+из наших собственных окопов, пересечём Ничейные земли, чтобы собраться вместе...
 </p>
 
 <p id="outro_1_btn">
@@ -942,7 +943,7 @@ one for the plural version, one for the singular version.
 <p id="outro_2_credits">
 "Рождественское перемирие между противостоящими траншеями"
 Иллюстрация AC Michael.
-Опубликовано в <i>The Illustrated London News</i>, 9 Января 1915 года.
+Опубликовано <i>The Illustrated London News</i>, 9 Января 1915 года.
 </p>
 
 <p id="outro_2_btn">
@@ -1015,7 +1016,7 @@ p.s: хочешь больше обучения по играм?<br>
 
 <p id="label_all_c">Наивный</p>
 <p id="label_short_all_c">
-кооператор
+наивный
 </p>
 <p id="icon_all_c">
 <span class="all_c">
@@ -1151,7 +1152,7 @@ p.s: хочешь больше обучения по играм?<br>
 </p>
 
 <p id="label_payoffs">
-выплаты
+награды
 </p>
 
 <p id="label_rules">
@@ -1159,11 +1160,11 @@ p.s: хочешь больше обучения по играм?<br>
 </p>
 
 <p id="label_next">
-далее &rarr;
+дальше &rarr;
 </p>
 
 <p id="label_continue">
-дальше
+далее
 </p>
 
 
