:pencil2: Fixing typos

--- a/peeps/index.html
+++ b/peeps/index.html
@@ -321,7 +321,7 @@
 		<!-- Playtesters -->
 		<div>
 			<p style="text-align:center; font-size:25px; line-height:1.5em; margin-top:45px;">
-				и особая благодарность моим друзьям, которые позволили мне приставать к ним для плейтестов...
+				и особая благодарность моим друзьям, которые позволили мне приставать к ним за плейтестами...
 			</p>
 			<div class="credits_names">
 				Alex Dytrych<br>
