--- a/words.html
+++ b/words.html
@@ -188,7 +188,7 @@ Thanks again!
 </p>
 
 <p id="oneoff_2_top">
-Потому что, если ты сотрудничаешь, то вы оба бросаете монету, чтобы выиграть 3. (счёт: +2 vs +2)
+Потому что, если ты доверился, то вы оба бросаете монету, чтобы выиграть 3. (счёт: +2 vs +2)
 Но если ты обманываешь и он доверился, то ты получаешь 3 монеты по цене 1. (счёт: +3 vs -1)
 <b>Потому: ты ещё "должен" ЖУЛЬНИЧАТЬ.</b>
 </p>
@@ -280,7 +280,7 @@ Thanks again!
 
 <p id="character_prober">
 <b>ДЕТЕКТИВ:</b>
-Первое: я анализирую тебя. Я начну: доверять, обманывать, ловерять, ловерять.
+Первое: я анализирую тебя. Я начну: доверять, обманывать, доверять, доверять.
 Если ты обманешь, я буду действовать как <span class="tft">Копикот</span>.
 Если ты никогда не обманешь, я буду <span class="all_d">всегда жульничать</span>, чтобы использовать тебя.
 Элементарно, мой дорогой Ватсон.
@@ -498,9 +498,9 @@ Thanks again!
 <p id="evo_7">
 Просто копируя движения другого игрока,
 <span class="tft">Копикоты</span> могут хорошо играть друг с другом,
-когда как <span class="all_d">Обманщики</span> посто обманывают себя!
+когда как <span class="all_d">Обманщики</span> просто обманывают себя!
 Мало того, но это также означает что <span class="tft">Копикоты</span>
-может дать <span class="all_d">Обманщикам</span>
+могут показать <span class="all_d">Обманщикам</span>
 вкус их собственного лекарства.
 </p>
 
@@ -532,7 +532,7 @@ Thanks again!
 ~ Elbert Hubbard
 </p>
 <p id="evo_9_btn">
-(ой, и кстати...)
+(о, кстати...)
 </p>
 
 <p id="evo_10">
@@ -550,7 +550,7 @@ Thanks again!
 <p id="evo_10_followup">
 (Примечание: иногда, несколько <span class="grudge">Злопамятных</span> могут задержаться,
 потому что все игроки кроме <span class="grudge">Злопамятных</span> и <span class="tft">Копикотов</span> 
-устранены, две ничьих.)
+устранены, две ничьи.)
 <br><br>
 Итак, кажется, что математика теории игр нам говорит, что:
 философия <span class="tft">Копикотов</span>,
@@ -563,7 +563,7 @@ Thanks again!
 </p>
 
 <p id="evo_11">
-Взгляни вокруг. Мир полон полными придурками.
+Взгляни вокруг. Мир полон кретинов.
 <br><br>
 Если <span class="tft">Копикот</span> является стратегией в этой повторяющейся игре доверия, которая настолько сильна -- что даже солдаты траншеи в Первой мировой войне самостоятельно "развили" аналогичную стратегию, называемую "живи и будь живым" -- почему тогда так много ненадежных людей?
 Что вызывает нашу эпидемию недоверия?
@@ -712,7 +712,7 @@ Thanks again!
 <p id="character_tf2t">
 <b>КОПИКОТЁНОК:</b><br>
 Привет! Я как <span class="tft">Копикот</span>,
-разве что я Жульничаю только после того, как ты обманешь меня два раза подряд.
+разве что я сжульничаю только после того, как ты обманешь меня два раза подряд.
 В конце концов, первый раз может быть ошибкой! Муррррр
 </p>
 
@@ -814,7 +814,7 @@ Thanks again!
 <b>От 50%,</b> <i>не победит никто.</i>
 <br><br>
 Вот почему "недопонимание" такой интересный барьер, которому можно доверять:
-это <i>немного</i> ведет к прощению, но <i>слишком много</i>,
+когда его <i>немного</i>, то оно прощается, но <i>слишком много</i>,
 и это приводит к широко распространенному недоверию!
 Я думаю, что наши современные медиа-технологии,
 помогли нам увеличить связь... еще больше увеличивая наше <i>недопонимание</i>.
