:globe_with_meridians: Translate notes

--- a/notes/index.html
+++ b/notes/index.html
@@ -14,7 +14,7 @@ So, it's optional to translate these!
 
 	<!-- TRANSLATE: "title" -->
 	<meta charset="utf-8">
-	<title>The Evolution of Trust: Feetnotes</title>
+	<title>Эволюция доверия: Заметки</title>
 	<link rel="icon" type="image/png" href="favicon.png">
 	<link rel="stylesheet" href="notes.css">
 
@@ -23,93 +23,93 @@ So, it's optional to translate these!
 <body>
 <div id="notes">
 
-<h1>NOTES:</h1>
+<h1>ПРИМЕЧАНИЯ:</h1>
 
-<h3>"The Evolution of Trust"</h3>
+<h3>"Эволюция доверия"</h3>
 
-<p>This interactive guide is heavily based off Robert Axelrod's groundbreaking 1984 book, <a href="https://www.amazon.com/Evolution-Cooperation-Revised-Robert-Axelrod/dp/0465005640">The Evolution of Cooperation</a>! I was also heavily inspired by his 1997 sequel, <a href="http://press.princeton.edu/titles/6144.html">The Complexity of Cooperation</a>, and Robert Putnam's 2000 book on America's declining "social capital", <a href="http://bowlingalone.com/">Bowling Alone</a>.</p>
+<p>Это интерактивное руководство основано на потрясающей книге Robert Axelrod 1984 года, <a href="https://www.amazon.com/Evolution-Cooperation-Revised-Robert-Axelrod/dp/0465005640">The Evolution of Cooperation</a>! Я был также сильно вдохновлен его продолжением 1997 года, <a href="http://press.princeton.edu/titles/6144.html">The Complexity of Cooperation</a>, и книга 2000 года Robert Putnam об уменьшающемся "социальном капитале" Америки, <a href="http://bowlingalone.com/">Bowling Alone</a>.</p>
 
-<p>yes i'm a bookworm nerd, plz don't bully me</p>
+<p>да я книжный ботаник, плиз не издевайтесь надо мной</p>
 
-<h3>"Fewer and fewer people say they trust each other"</h3>
+<h3>"Всё меньше и меньше людей говорят, что они доверяют друг другу"</h3>
 
-<p>To see a thorough statistical take on this, check out <a href="https://ourworldindata.org/trust">Our World In Data</a>. Mmmm stats</p>
+<p>Чтобы увидеть подробный статистический анализ этого, проверьте <a href="https://ourworldindata.org/trust">Our World In Data</a>. Мммм статистика</p>
 
-<h3>"The Game of Trust"</h3>
+<h3>"Игра доверия"</h3>
 
-<p>This game is also known in game theory as the infamous <em>Prisoner's Dilemma</em>. The Prisoner's Dilemma is named after a story where two suspects can either squeal on their partner-in-crime ("cheat"), or stay silent ("cooperate"). I chose not to do this story because 1) in this case, both players "cooperating" would be bad for society, and 2) it's unrealistic, everyone knows that snitches get stitches</p>
+<p>Эта игра также известна в теории игр как печально известная <em>Дилемма Заключенного</em>. Дилемма заключенного названа в честь истории, в которой двое подозреваемых могут либо донести на своего преступного партнера-по-делу ("сжульничать"), либо молчать ("сотрудничать"). Я решил не делать эту историю, потому что 1) в этом случае оба "сотрудничающие" игрока были бы плохими для общества и 2) это нереально, все знают, что стукачи получают по заслугам</p>
 
-<h3>"You won't know in advance when the last round is"</h3>
+<h3>"Ты не будешь знать заранее, когда последний раунд"</h3>
 
-<p>In the repeated game of trust (also known as <em>Iterated Prisoner's Dilemma</em>), it's important that neither player knows <em>when</em> the last round is. Why? Think about it - on the last round, both players would know their action has no consequence, so they'd both cheat. But that means in the second-last round, their actions can't change the next round, so they'd also both cheat. But that means in the third-last round... etc etc.</p>
+<p>В повторяющейся игре доверия (также известной как <em>Итерационной Дилемме Заключённого</em>), важно чтобы ни один из игроков не знал <em>когда</em> последний раунд. Зачем? Подумайте об этом - в последнем раунде, оба игрока будут знать, что их действие не имеет никакого значения, поэтому они оба сжульничают. Но это означает, что во предпоследнем раунде их действия не могут изменить следующий раунд, поэтому они также оба сжульничают. Но это означает, что в предпредпоследнем раунде... и т.д. и т.п.</p>
 
-<h3>"Copycat"</h3>
+<h3>"Копикот"</h3>
 
-<p>This strategy is better known in game theory as <em>Tit For Tat</em>. It was created by Anatol Rapoport in 1980, for Robert Axelrod's game theory tournament. I chose not to use the name "Tit For Tat" because 1) it <em>sounds</em> mean, although it's a nice &amp; fair strategy, and 2) a lot of the public have already heard about Tit For Tat, so if I used that name, players might just place their bets on this character because they've already heard of "Tit For Tat".</p>
+<p>Эта стратегия более известна в теории игр как <em>Tit For Tat</em>. Он был создан Anatol Rapoport в 1980 году, для теории игрового турнира Robert Axelrod. Я решил не использовать имя "Tit For Tat" потому что 1) это <em>звучит</em> скупо, хотя это хорошая и справедливая стратегия, и 2) многие люди уже слышали о Tit For Tat, поэтому, если бы я использовал это название, игроки могли бы просто делать ставки на этого персонажа, потому что они уже слышали о "Tit For Tat".</p>
 
-<h3>"You may be skeptical about the Christmas Truce"</h3>
+<h3>"Ты можешь скептически относиться к Рождественскому перемирию"</h3>
 
-<p>There was another guy who was skeptical, too. During the truce, a German corporal remarked with disgust, <a href="http://time.com/3643889/christmas-truce-1914/">"Such a thing should not happen in wartime. Have you no German sense of honor?"</a></p>
+<p>Был еще один парень, который тоже был настроен скептически. Во время перемирия немецкий капрал с отвращением заметил, <a href="http://time.com/3643889/christmas-truce-1914/">"Такого не должно быть в военное время. У вас нет немецкого чувства чести?"</a></p>
 
-<p>That man was Adolf Hitler.</p>
+<p>Этим человеком был Adolf Hitler.</p>
 
-<p>You can't make this sh*t up.</p>
+<p>Вы не можете заставить это заткнуться.</p>
 
-<h3>"For culture to evolve"</h3>
+<h3>"Чтобы культура развивалась"</h3>
 
-<p>There's a new, super-young interdisciplinary field that I'm really <em>excited</em> by, called <em>Cultural Evolution</em>. Admittedly, it's a bad name, not least because it sounds uncomfortably close to "Social Darwinism". Which it's not. Pinky promise.</p>
+<p>Есть новая, сверхъестественная междисциплинарная область, которая меня очень <em>волнует</em>, называется <em>Культурная Эволюция</em>. По общему признанию, это плохое имя, не в последнюю очередь потому, что оно звучит неудобно близко к "Социальному Дарвинизму". Что не так. Пинки обещает.</p>
 
-<p>One core part of Cultural Evolution Theory is culture evolves the same way life does: through variation &amp; selection. Variation: people differ in beliefs &amp; behaviors, and invent new ones almost every day. Selection: people try to imitate their heroes &amp; elders, and adopt their beliefs/behaviors.</p>
+<p>Одной из основных частей теории Культурной Эволюции является культура, развивающаяся так же, как и жизнь: посредством вариации и отбора. Вариация: люди отличаются убеждениями и поведением, и придумывают новые почти каждый день. Выбор: люди пытаются подражать своим героям и предкам, и принимают их убеждения/поведение.</p>
 
-<p>(Note: this is <em>not</em> quite Richard Dawkin's "meme" theory. "Meme" implies, that, like genes, ideas come in discrete chunks &amp; replicate with high fidelity. This is obviously untrue. Also you can't say "meme" with a straight face these days, so whatever)</p>
+<p>(Примечание: это <em>не</em> совсем теория «мема» от Richard Dawkin. «Мем» подразумевает, что, подобно генам, идеи поступают в дискретные куски и воспроизводятся с высокой точностью. Это, очевидно, неверно. Также вы не можете сказать «мем» с прямым лицом в наши дни, так что не важно)</p>
 
-<p>The reason why I think Cultural Evolution is so promising, is that it could integrate <em>all</em> the human sciences: psychology, sociology, economics, anthropology, political science, neuroscience, biology. The greatest problems of our time do not obey conventional academic boundaries -- so, it's about dang time we created a common language between the sciences and humanities.</p>
+<p>Причина, по которой я думаю, что Культурная Эволюция настолько многообещающая, заключается в том, что она может интегрировать <em>все</em> гуманитарные науки: психология, социология, экономика, антропология, политология, нейронаука, биология. Самые большие проблемы нашего времени не подчиняются общепринятым академическим границам -- так что речь идет о времени, когда мы создали общий язык между науками и гуманитарием.</p>
 
-<p>If you want to learn more about Cultural Evolution Theory, I highly recommend Joseph Heinlich's 2015 book, <a href="http://press.princeton.edu/titles/10543.html">The Secret of Our Success</a>!</p>
+<p>Если вы хотите больше узнать о Теории Эволюции Культуры, я настоятельно рекомендую книгу Joseph Heinlich 2015 года, <a href="http://press.princeton.edu/titles/10543.html">The Secret of Our Success</a>!</p>
 
-<h3>"[Always Cheat's] exploitativeness was its downfall"</h3>
+<h3>"Эксплуататорство [Обманщиков] стало их падением"</h3>
 
-<p>You may have heard that someone found a player strategy that can "exploit evolution". From the <a href="https://www.scientificamerican.com/article/game-theory-calls-cooperation-into-question1/">Scientific American</a>: "[Press &amp; Dyson's results] suggested the best strategies were selfish ones that led to extortion, not cooperation."</p>
+<p>Возможно, вы слышали, что кто-то нашел стратегию игрока, которая может "эксплуатировать эволюцию". Из <a href="https://www.scientificamerican.com/article/game-theory-calls-cooperation-into-question1/">Scientific American</a>: "[Пресса и результаты Dyson] предположили, что лучшие стратегии были эгоистичными, что привело к вымогательству, а не сотрудничеству."</p>
 
-<p>Press &amp; Dyson's findings <em>are</em> really important, but Scientific American confused two different uses of the word "evolutionary". The first use, the way this interactive guide used it, was to mean that the <em>tournament's population</em> changes over time. The second use, the way P&amp;D meant it, was that the <em>player's rules</em> changes over time. For example: Detective is "evolutionary" since it changes its own rules, while Copycat is <em>not</em> "evolutionary" since it sticks to its principles.</p>
+<p>Пресса и находки Dyson <em>действительно</em> важны, но научный американец путал два разных использования слова "эволюционный". Первое использование, используемое этим интерактивным руководством, означало, что <em>популяция турнира</em> изменяется со временем. Второе использование, как это понимал P&amp;D, состояло в том, что <em>правила игрока</em> меняются со временем. Например: Детектив является "эволюционным", поскольку он меняет свои собственные правила, а Копикот -- <em>не</em> "эволюционный", поскольку он придерживается своих принципов.</p>
 
-<p>So, P&amp;D found strategies that could exploit "evolutionary" <em>players</em> like Detective, but their strategies <em>still could not exploit the evolution of the tournament</em>, because in the long run, fair &amp; nice strategies still win. </p>
+<p>Таким образом, P&amp;D нашел стратегии, которые могли бы использовать "эволюционные" <em>игроки</em>, такие как Детектив, но их стратегии <em>всё ещё не могли эксплуатировать эволюцию турнира</em>, потому что в долгосрочной перспективе честные и хорошие стратегии всё ещё выигрывают.</p>
 
-<h3>"We have fewer friends -- period."</h3>
+<h3>"У нас меньше друзей -- зацикленный круг."</h3>
 
-<p>Seriously, go read Robert Putnam's 2000 book, <a href="http://bowlingalone.com/">Bowling Alone</a>. Yeah it's a bit outdated by now, 17 years later, but its core findings and lessons are still true as ever -- probably even more so.</p>
+<p>Серьезно, прочитайте книгу Robert Putnam 2000 года, <a href="http://bowlingalone.com/">Bowling Alone</a>. Да, она уже немного устарела, 17 лет спустя, но её основные выводы и уроки по-прежнему верны как всегда -- возможно, даже больше.</p>
 
-<h3>"Non-zero-sum game" / "Win-Win"</h3>
+<h3>"Игра без нулевой суммы" / "Беспроигрышная"</h3>
 
-<p>This is kinda cheesy, but I still adore the 1989 book, <a href="https://www.amazon.com/Habits-Highly-Effective-People-Powerful/dp/0743269519">The Seven Habits of Highly Effective People</a> -- especially Habit #4: Think Win-Win.</p>
+<p>Это звучит дёшего, но я всё ещё рекомендую книгу 1989 года, <a href="https://www.amazon.com/Habits-Highly-Effective-People-Powerful/dp/0743269519">The Seven Habits of Highly Effective People</a> -- особенно Привычка #4: Беспроигрышное мышление.</p>
 
-<p>Because, contrary to popular belief, coming up with Win-Win solutions is hard, takes lots of effort, and is emotionally painful. Heck, I'd go even further – I'd say our culture's default stance of Win-Lose "us versus them" is the easy path, the lazy path, the equivalent of activism junk food.</p>
+<p>Потому что, вопреки распространенному мнению, придумывать решения беспроигрышных игр сложно, требует больших усилий и эмоционально больно. Черт возьми, я бы пошёл ещё дальше - я бы сказал, что наша культурная позиция по-умолчанию "нас против них" - это легкий путь, ленивый путь, эквивалент активности нездоровой пищи.</p>
 
-<p>Anyway. Exaggerations aside, I strongly believe "Win-Win" / "Non-Zero-Sum" is something we all urgently need -- in our personal lives, social lives, and <em>definitely</em> political lives.</p>
+<p>В общем. В сторону преувеличения, я твёдо верю, что "беспроигрышная" / "не нулевая сумма" это то что нам всем срочно необходимо -- в нашей личной жизни, социальной жизни, и <em>определённо</em> в политической жизни.</p>
 
-<h3>"Copykitten"</h3>
+<h3>"Копикотёнок"</h3>
 
-<p>Just like how Copycat's original name was Tit For Tat, Copykitten's original name is <em>Tit For Two Tats</em>. Same rule: Cooperate, unless the other players cheats <em>twice</em> in a row.</p>
+<p>Точно так же, как и оригинальное имя Копикота из Tit For Tat, Оригинальное имя Копикотёнка из <em>Tit For Two Tats</em>. То же правило: сотрудничать, пока другие игроки не обманывают <em>дважды</em> подряд.</p>
 
-<p>There's another forgiving variant of Tit For Tat called <em>Generous Tit For Tat</em>. It's got a similar but slightly different rule: Cooperate, but when the other player cheats, forgive them with a X% chance. This design, with the variable "X", lets you set different "forgiveness" levels for the player.</p>
+<p>Есть еще один прощающий вариант Tit For Tat, называемый <em>Generous Tit For Tat</em>. У этого есть аналогичное, но немного другое правило: сотрудничать, но если другие игроки жульничают, то прощать их с X% вероятностью. Этот дизайн с переменной "X" позволяет вам устанавливать разные уровни "снисхождения" для игрока.</p>
 
-<h3>"Simpleton"</h3>
+<h3>"Простак"</h3>
 
-<p>Also known as Pavlov, or Win-Stay-Lose-Shift.</p>
+<p>Также известен как Pavlov или Выиграл-Останься-Проиграл-Переключись.</p>
 
-<h3>"Our modern media [...] has increased our miscommunication"</h3>
+<h3>"Наши СМИ [...] увеличили наше недопонимание"</h3>
 
-<p>I'm only in my twenties, I don't know why I always sound like an old grump shaking my fist at a cloud. But, yeah, anyway, go read Neil Postman's 1985 book, <a href="https://www.amazon.com/Amusing-Ourselves-Death-Discourse-Business/dp/014303653X">Amusing Ourselves To Death</a>. It's about how the communications technology we use subtly shapes our culture ("the medium is the message") and how technology that is biased towards quick &amp; fast information (TV in 1985, social media now) turns us all into trivial, short-term thinkers.</p>
+<p>Мне всего лишь двадцать, я не знаю, почему я всегда звучу как старый ворчун, трясущий кулаком на облака. Но, да, во всяком случае, прочитайте книгу Neil Postman 1985 года, <a href="https://www.amazon.com/Amusing-Ourselves-Death-Discourse-Business/dp/014303653X">Amusing Ourselves To Death</a>. Речь идет о том, как коммуникационные технологии, которые мы используем, тонко формируют нашу культуру ("среда - это сообщение") и как технология, которая предвзята к быстрой информации (ТВ в 1985 году, социальные медиа сейчас) превращает нас всех в тривиальных, краткосрочных мыслителей.</p>
 
-<p>Although I don't agree with <em>everything</em> in his book, it's a real eye-opener, and surprisingly prescient for 1985. His rant against Sesame Street is kinda weird, though.</p>
+<p>Хотя я не согласен со <em>всем</em> в его книге, это настоящий открытый взгляд и удивительно предсказуемый для 1985 года. Однако его разглагольствование на Sesame Street, похоже, странно.</p>
 
-<h3>"Build relationships. Find win-wins. Communicate clearly."</h3>
+<h3>"Строй отношения. Находи победы. Общайся чётко."</h3>
 
-<p>Giving advice can come off as condescending, so let me be perfectly honest: I do <em>not</em> have any of this figured out, personally. I'm bad at developing friendships, especially with people of different political views than me. I occasionally forget about win-wins, and lapse into "us versus them" thinking. And judging by this rambling, I'm also still terrible at communicating clearly.</p>
+<p>Предоставление совета может расцениваться как снисхождение, поэтому позвольте мне быть совершенно честным: я <em>не</em> понял это лично. Я плохо разбираюсь в дружбе, особенно с людьми отличных от моих политических взглядов. Я иногда забываю о выигрышных победах и размышляю о "нас против них". И, судя по этому бормотанию, я всё ещё ужасен в общении.</p>
 
-<p>But I want to get better. This stuff is <em>hard</em>. Building peace &amp; trust in the world, from the bottom up, is <em>hard</em>.</p>
+<p>Но я хочу становиться лучше. Всё это <em>тяжёло</em>. Построение мира и доверия на земле, снизу вверх, это <em>тяжело</em>.</p>
 
-<p>And that's why it's worth it. &lt;3</p>
+<p>И именно поэтому оно того стоит. &lt;3</p>
 
 
 </div>
