:globe_with_meridians: Fix strings by style

--- a/notes/index.html
+++ b/notes/index.html
@@ -27,7 +27,7 @@ So, it's optional to translate these!
 
 <h3>"Эволюция доверия"</h3>
 
-<p>Это интерактивное руководство основано на потрясающей книге Robert Axelrod 1984 года, <a href="https://www.amazon.com/Evolution-Cooperation-Revised-Robert-Axelrod/dp/0465005640">The Evolution of Cooperation</a>! Я был также сильно вдохновлен его продолжением 1997 года, <a href="http://press.princeton.edu/titles/6144.html">The Complexity of Cooperation</a>, и книга 2000 года Robert Putnam об уменьшающемся "социальном капитале" Америки, <a href="http://bowlingalone.com/">Bowling Alone</a>.</p>
+<p>Это интерактивное руководство основано на потрясающей книге Robert Axelrod 1984 года, <a href="https://www.amazon.com/Evolution-Cooperation-Revised-Robert-Axelrod/dp/0465005640">The Evolution of Cooperation</a>! Я был также сильно вдохновлен его продолжением 1997 года, <a href="http://press.princeton.edu/titles/6144.html">The Complexity of Cooperation</a>, и книгой Robert Putnam 2000 года об уменьшающемся "социальном капитале" Америки, <a href="http://bowlingalone.com/">Bowling Alone</a>.</p>
 
 <p>да я книжный ботаник, плиз не издевайтесь надо мной</p>
 
@@ -53,7 +53,7 @@ So, it's optional to translate these!
 
 <p>Этим человеком был Adolf Hitler.</p>
 
-<p>Вы не можете заставить это заткнуться.</p>
+<p>Вы не можете просто заставить его заткнуться.</p>
 
 <h3>"Чтобы культура развивалась"</h3>
 
