--- a/words.html
+++ b/words.html
@@ -98,7 +98,7 @@ Thanks again!
 Это было Рождество 1914 года на Западном фронте.<br>
 Несмотря на строгие приказы <i>не</i> расслабляться с противником,<br>
 британские и немецкие солдаты покинули свои окопы и пересекли Ничейную<br>
-землю, чтобы похоронить свои трупы, обменяться подарками и поиграть.
+землю, чтобы похоронить погибших, обменяться подарками и поиграть.
 <br><br>
 
 Между тем: это 2017 год, Запад находится в мире на протяжении десятилетий,<br>
@@ -350,7 +350,7 @@ Thanks again!
 неофициальный, секретный мир.
 </p>
 <p id="tournament_6">
-Они назвали это <b>системой "живи и будешь жить".</b>
+Они назвали это <b>системой "живи и дай жить другим".</b>
 Проще говоря, ты не стреляешь в меня, я не стреляю в тебя. И это сработало, во многих местах!
 </p>
 <p id="tournament_7">
@@ -384,11 +384,11 @@ Thanks again!
 </p>
 <p id="tournament_winner_3">
 У <span class="tft">Копикота</span> много имён.
-Золотое правило, взаимный альтруизм, око за око, или... <b>живи и будь живым.</b>
+Золотое правило, взаимный альтруизм, око за око, или... <b>живи и дай жить другим.</b>
 Вот почему "мир" мог появиться в окопах Первой мировой войны:
 
 Когда ты вынужден играть в одну и ту же игру с
-теми же <i>конкретными людьми</i> (не просто одним и тем же родовым "врагом") снова и снова --
+теми же <i>конкретными людьми</i> (не просто одним и тем же общим "врагом") снова и снова --
 <span class="tft">Копикот</span> не просто выигрывает битву, но и выигрывает войну.
 <br><br>
 Но если что-то сильно меняется, когда ты играешь в несколько раундов одной и той же игры, что, если мы сыграем...
@@ -440,13 +440,13 @@ Thanks again!
 </p>
 
 <p id="evo_2_all_c">
-Делает смысл, <span class="all_c">Наивные</span> превосходят всех остальных прямо сейчас...
+Это имеет смысл, <span class="all_c">Наивные</span> превосходят всех остальных прямо сейчас...
 </p>
 <p id="evo_2_all_d">
-Делает смысл, <span class="all_d">Обманщики</span> могут эксплуатировать <span class="all_c">Наивных</span>...
+Это имеет смысл, <span class="all_d">Обманщики</span> могут эксплуатировать <span class="all_c">Наивных</span>...
 </p>
 <p id="evo_2_tft">
-Делает смысл, <span class="tft">Копикот</span> выиграл турнир в прошлый раз, почему он не сможет сейчас?...
+Это имеет смысл, <span class="tft">Копикот</span> выиграл турнир в прошлый раз, почему он не сможет сейчас?...
 </p>
 <p id="evo_2">
 Посмотрим, прав ли ты:
@@ -464,15 +464,15 @@ Thanks again!
 
 <p id="evo_3_all_c">
 Увы, <span class="all_c">Наивные</span> были съедены
-<span class="all_d">Обманщиками</span>, чья численость увеличилась в 5 раз.
+<span class="all_d">Обманщиками</span>, чья численость увеличилась на 5.
 </p>
 <p id="evo_3_all_d">
 К сожалению, ты был прав! <span class="all_d">Обманщики</span> на этот раз победили, 
-и их стало в 5 раз больше.
+и их стало на 5 больше.
 </p>
 <p id="evo_3_tft">
 Увы, <span class="tft">Копикоты</span> не выиграли – но им было не так плохо как <span class="all_c">Наивным</span>. Те были съедены <span class="all_d">Обманщиками</span>,
-чья численность увеличилась в 5 раз.
+чья численность увеличилась на 5.
 </p>
 <p id="evo_3">
 Но давай попробуем еще несколько раундов...
@@ -499,7 +499,7 @@ Thanks again!
 Просто копируя движения другого игрока,
 <span class="tft">Копикоты</span> могут хорошо играть друг с другом,
 когда как <span class="all_d">Обманщики</span> просто обманывают себя!
-Мало того, но это также означает что <span class="tft">Копикоты</span>
+Мало того, это также означает что <span class="tft">Копикоты</span>
 могут показать <span class="all_d">Обманщикам</span>
 вкус их собственного лекарства.
 </p>
@@ -512,7 +512,7 @@ Thanks again!
 ...<span class="tft">Копикот</span> наследует землю.
 </p>
 <p id="evo_9_all_c">
-Итак, Хотя твоя ставка была исключена -- милые, но <span class="all_c">Наивные</span>
+Итак, хотя твоя ставка была исключена -- милые, но <span class="all_c">Наивные</span>
 были обречены с самого начала -- в конце-концов, <i>умная</i> форма нищеты преобладала,
 и <span class="all_d">Обманщики</span> были раздавлены.
 </p>
@@ -552,10 +552,10 @@ Thanks again!
 потому что все игроки кроме <span class="grudge">Злопамятных</span> и <span class="tft">Копикотов</span> 
 устранены, две ничьи.)
 <br><br>
-Итак, кажется, что математика теории игр нам говорит, что:
+Итак, кажется, что математика теории игр нам говорит:
 философия <span class="tft">Копикотов</span>,
-"Поступай с другими так, как ты хотел, чтобы другие поступали с тобой", может быть не просто
-<i>моральной</i> истиной, сколько <i>математической</i> истиной.
+"Поступай с другими так, как ты хотел, чтобы другие поступали с тобой", может быть не только
+<i>моральной</i> истиной, но и <i>математической</i> истиной.
 Однако...
 </p>
 <p id="evo_10_btn">
@@ -565,7 +565,8 @@ Thanks again!
 <p id="evo_11">
 Взгляни вокруг. Мир полон кретинов.
 <br><br>
-Если <span class="tft">Копикот</span> является стратегией в этой повторяющейся игре доверия, которая настолько сильна -- что даже солдаты траншеи в Первой мировой войне самостоятельно "развили" аналогичную стратегию, называемую "живи и будь живым" -- почему тогда так много ненадежных людей?
+<!-- Копикот является стратегией в этой повторяющейся игре доверия; она настолько сильна, что даже солдаты Первой мировой войны самостоятельно "развили" аналогичную стратегию; почему тогда мир полон ненадёжных людей? -->
+Если <span class="tft">Копикот</span> является стратегией в этой повторяющейся игре доверия, которая настолько сильна, что даже солдаты Первой мировой войны самостоятельно "развили" аналогичную стратегию, почему тогда так много ненадежных людей?
 Что вызывает нашу эпидемию недоверия?
 <br><br>
 Ключ в самой формулировке. "В <i>этой</i> повторяющейся игре доверия."
@@ -594,7 +595,7 @@ Thanks again!
 выигрывает в долгосрочной перспективе,
 согласно нашим действующим правилам!
 <br><br>
-Но это под нашими <i>нынешними</i> правилами, которые говорят, что игроки играют друг против друга 10 раундов за матч.
+Но это при <i>нынешних</i> правилах, которые говорят, что персонажи играют друг против друга по 10 раундов за матч.
 <span class="tft">Копикот</span> все ещё выигрывает в 7 раундах? 5 раундах? 3? 2? 1?
 <br><br>
 <b>Измени количество раундов</b> с помощью слайдера ниже, затем <b>НАЧНИ</b> симуляцию и посмотри, что произойдет.
@@ -647,7 +648,7 @@ Thanks again!
 <br><br>
 <b>"Игра с нулевой суммой".</b> К сожалению, общее убеждение, что выигрыш для "нас" <i>должен</i> стать недопустимым "для них", и наоборот.
 <br><br>
-<b>"Игра с ненулевой суммой".</b> Когда люди прилагают все усилия для создания беспроигрышного исхода! (или, по крайней мере, избегают потерь.) Без игры с нулевой суммой <i>доверие не может развиваться.</i>
+<b>"Игра с ненулевой суммой".</b> Когда люди прилагают все усилия для создания беспроигрышного исхода! (или, по крайней мере, избегают потерь.) Без игры с нулевой суммой <i>доверие не может развиваться.</i> <!-- Another -->
 <br><br>
 Говоря об этом,
 давай посмотрим на наш третий и последний барьер на пути развития доверия...
@@ -769,7 +770,7 @@ Thanks again!
 </p>
 
 <p id="noise_evo_3">
-...то же самое, что и раньше, за исключением половины <span class="all_c">Наивных</span> с половиной <span class="all_d">Обманщиков</span>. Это гораздо <i>менее</i> снисходительная, <i>более</i> враждебная среда.
+...то же самое, что и раньше, за исключением замены <span class="all_c">Наивных</span> на <span class="all_d">Обманщиков</span>. Это гораздо <i>менее</i> снисходительная, <i>более</i> враждебная среда.
 <br><br>
 Кто, по твоему мнению, сейчас победит? <b>Подумай, затем ДЕЛАЙТЕ ВАШИ СТАВКИ:</b>
 </p>
@@ -814,10 +815,10 @@ Thanks again!
 <b>От 50%,</b> <i>не победит никто.</i>
 <br><br>
 Вот почему "недопонимание" такой интересный барьер, которому можно доверять:
-когда его <i>немного</i>, то оно прощается, но <i>слишком много</i>,
-и это приводит к широко распространенному недоверию!
-Я думаю, что наши современные медиа-технологии,
-помогли нам увеличить связь... еще больше увеличивая наше <i>недопонимание</i>.
+когда его <i>немного</i>, то оно прощается, но его <i>избыток</i>
+способоствует широко распространенному недоверию!
+Я думаю, что наши современные медиа-технологии
+помогли нам развить связь... ещё больше увеличивая наше <i>недопонимание</i>.
 <br><br>
 Наконец, давай поэкспериментируем со <i>всеми</i> числами, ручками и ползунками.
 Поиграем...
@@ -881,28 +882,27 @@ one for the plural version, one for the singular version.
 <!-- - - - - - - - - - - - - - - - - -->
 
 <p id="conclusion_0">
-Теория игр показала нам три вещи, которые нам нужны для эволюции доверия:
+Теория игр показала три вещи, необходимые для эволюции доверия:
 </p>
 <p id="conclusion_1_a">
 1. ПОВТОРНЫЕ ВЗАИМОДЕЙСТВИЯ
 </p>
 <p id="conclusion_1_a2">
 Доверие поддерживает отношения,
-но вам нужно знание возможных будущих повторных взаимодействий, <i>прежде</i> чем доверие может развиться.
+но вам нужна уверенность в дальнейших повторных взаимодействиях, <i>прежде</i> чем доверие может развиться.
 </p>
 <p id="conclusion_2_a">
 2. ВОЗМОЖНАЯ ВЗАИМОВЫГОДА
 </p>
 <p id="conclusion_2_a2">
-Вы должны играть в игру с ненулевой суммой,
-игру, где, по крайней мере, возможно, чтобы <i>оба</i> игрока могли быть лучше -- беспроигрышно.
+Вы должны играть в игру с ненулевой суммой, где, по крайней мере, возможно, чтобы <i>обоим</i> игрокам было лучше -- беспроигрышно.
 </p>
 <p id="conclusion_3_a">
 3. МИНИМУМ НЕДОПОНИМАНИЯ
 </p>
 <p id="conclusion_3_a2">
 Если уровень недопонимания <i>слишком</i> высокий, доверие ломается.
-Но когда есть немного недопонимания, следует быть <i>более</i> снисходительным.
+Но когда недопонимания немного, следует быть <i>более</i> снисходительным.
 </p>
 <p id="conclusion_4">
 Конечно, реальное доверие зависит от гораздо большего чем это.
@@ -917,7 +917,7 @@ one for the plural version, one for the singular version.
 Если и есть одна большая<br>
 выгода от <i>всей</i> теории игр, то это:
 <br><br>
-<b>Что игра, определяет то, что игроки в ней делают.</b><br>
+<b>Игра, определяет то, что игроки в ней делают.</b><br>
 Сегодня проблема заключается не только в том, что люди теряют<br>
 доверие, а в том, что наша <i>среда</i> действует против её эволюции.
 <br><br>
@@ -926,10 +926,10 @@ one for the plural version, one for the singular version.
 <b>В краткосрочной перспективе игра определяет игроков. Но, в конечном итоге,
 именно игроки определяют игру.</b>
 <br><br>
-Итак, сделай то, что <i>ты</i> можешь сделать, чтобы создать условия, необходимые
-для развития доверия. Строй отношения. Находи победы. Общайся чётко.
+Итак, сделай то, что <i>ты</i> можешь сделать, создай условия
+способствующие развитию доверия. Строй отношения. Побеждай. Общайся чётко.
 Может быть, тогда мы сможем прекратить стрелять друг в друга, выберемся
-из наших собственных окопов, пересечём Ничейные земли, чтобы собраться вместе...
+из окопов, пересечём границы, чтобы собраться вместе...
 </p>
 
 <p id="outro_1_btn">
@@ -937,11 +937,11 @@ one for the plural version, one for the singular version.
 </p>
 
 <p id="outro_2">
-...как жить и быть живым.
+...как жить и давать жить другим.
 </p>
 
 <p id="outro_2_credits">
-"Рождественское перемирие между противостоящими траншеями"
+"A Christmas Truce between Opposing Trenches"
 Иллюстрация AC Michael.
 Опубликовано <i>The Illustrated London News</i>, 9 Января 1915 года.
 </p>
